<resources>
    <string name="app_name">Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="production_countries">Production countries:</string>
    <string name="production_companies">Production companies:</string>
    <string name="runtime">%s min</string>
    <string name="poster_url">https://image.tmdb.org/t/p/w500%s</string>
    <string name="back">Back</string>
</resources>